# flappy_ray

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: basic.c  bricks.c  main.c  raylib.c
